[gd_scene load_steps=6 format=2]

[ext_resource path="res://scn/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/img/IMG_20180511_154232.jpg" type="Texture" id=2]
[ext_resource path="res://scn/BeerIcon.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 320.371, 12.9062 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 383.715, 32.1468 )
b = Vector2( 384.823, 332.424 )

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 508.04, 253.244 )
scale = Vector2( 0.248432, 0.248432 )
texture = ExtResource( 2 )

[node name="BeerBar" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 16.9548, 278.882 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.8
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeerBar" index="0"]

position = Vector2( 406.61, 23.8067 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="BeerBar/CollisionShape2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -319.0
margin_top = -10.0
margin_right = 320.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.101074, 0.354286, 0.539062, 1 )
_sections_unfolded = [ "Rect" ]

[node name="Customers" type="Node" parent="." index="2"]

[node name="BeerSpawn" type="Position2D" parent="." index="3"]

position = Vector2( 159.473, 235.734 )

[node name="CustomerSpawn" type="Position2D" parent="." index="4"]

position = Vector2( 279.05, 325.653 )
scale = Vector2( 0.622881, 0.611197 )

[node name="BeerTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="CustomerTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="Beers" type="Node" parent="." index="7"]

[node name="Floor" type="ColorRect" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -7.0
margin_top = 497.0
margin_right = 964.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.125, 0.0322266, 0, 1 )

[node name="Floor2" type="ColorRect" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -6.0
margin_top = 506.0
margin_right = 964.0
margin_bottom = 541.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.289062, 0.125644, 0.0688782, 1 )

[node name="UI" type="Control" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -860.0
margin_bottom = -440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="AddBeerBtn" type="Button" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 119.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add beer"
flat = false
align = 1

[node name="ClearsBeers" type="Button" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 51.0
margin_right = 120.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clears"
flat = false
align = 1

[node name="BeerContainer" type="HBoxContainer" parent="UI" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 43.0
margin_right = 890.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="BeerIcon" parent="UI/BeerContainer" index="0" instance=ExtResource( 3 )]

margin_left = 315.0
margin_right = 355.0
margin_bottom = 86.0
rect_clip_content = false
_sections_unfolded = [ "Margin", "Rect" ]

[node name="BeerIcon2" parent="UI/BeerContainer" index="1" instance=ExtResource( 3 )]

margin_left = 359.0
margin_right = 399.0
margin_bottom = 86.0
rect_clip_content = false

[node name="BeerIcon3" parent="UI/BeerContainer" index="2" instance=ExtResource( 3 )]

margin_left = 403.0
margin_right = 443.0
margin_bottom = 86.0
rect_clip_content = false

[node name="Area51" type="Area2D" parent="." index="11"]

position = Vector2( 858.989, 250.704 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area51" index="0"]

position = Vector2( -396.676, -167.313 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="12"]

position = Vector2( 506.024, 281.964 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="timeout" from="CustomerTimer" to="." method="_on_CustomerTimer_timeout"]

[connection signal="pressed" from="UI/AddBeerBtn" to="." method="_on_AddBeerBtn_pressed"]

[connection signal="pressed" from="UI/ClearsBeers" to="." method="_on_ClearsBeers_pressed"]

[connection signal="body_entered" from="Area51" to="." method="_on_Area51_body_entered"]


